# apertium-ewo

./: Makefile  Makefile.am  Makefile.in  README  aclocal.m4  apertium-ewo.ewo.lexc  apertium-ewo.ewo.lexc.hfst  apertium-ewo.ewo.mor.twol  apertium-ewo.ewo.spellrelax  apertium-ewo.ewo.twol  apertium-ewo.ewo.twol.hfst  apertium-ewo.pc  apertium-ewo.pc.in  config.status  configure  configure.ac  ewo.autogen.hfst  ewo.automorf.hfst  ewo.autoseg.hfst  ewo.gen.hfst  ewo.lexc.hfst  ewo.mor.hfst  ewo.mor.twol.hfst  ewo.seg.hfst  ewo.spellrelax.hfst  ewo.twol.hfst  modes.xml
.deps/: ewo.autogen.att  ewo.automorf.att  ewo.autoseg.att
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
modes/: ewo-disam.mode  ewo-gener.mode  ewo-lexc.mode  ewo-morph.mode  ewo-tagger.mode  ewo-twol.mode
